# MkdocsDeploy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pull_request.yaml  release.yaml
docs/: configuration.md  index.md
mkdocs_config/: gen_ref_pages.py  mkdocs.yml
source/mkdocs_deploy/: abstract.py  actions.py  configuration.py  main.py  shared_implementations.py  versions.py
source/mkdocs_deploy/plugins/: aws_s3.py  html_redirect.py  local_filesystem.py
source/tests/: conftest.py  mock_plugin.py  mock_wrapper.py
source/tests/test_modules/: test_actions.py
source/tests/test_modules/test_actions/: conftest.py  test_create_alias.py  test_delete_alias.py  test_delete_version.py  test_load_plugins.py  test_refresh_alias.py  test_upload.py
source/tests/test_modules/test_shared_implementations/: test_is_index_file.py  test_realtive_link.py
source/tests/test_plugins/: test_html_redirect.py
source/tests/test_plugins/test_aws_s3/: conftest.py  test_source.py  test_target.py
