[tool.poetry]
name = "mkdocs-deploy"
version = "0.1.0"
description = "Mkdocs versioning and deployment tool"
authors = [
    "Philip Couling <couling@gmail.com>",
]
readme = "README.md"
license = "Apache-2.0"
packages = [
    { include = "mkdocs_deploy", from = "source" },
]

[tool.poetry.scripts]
mkdocs-deploy = 'mkdocs_deploy.main:main'

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.4"
click = "^8.0"
boto3 = "^1.26.45"

[tool.poetry.plugins."mkdocs.plugins"]
"mkdocs-deploy" = "mkdocs_deploy.mkdocs_plugin:MkdocsDeploy"

[tool.poetry.plugins."mkdocs_deploy.plugins"]
"local" = "mkdocs_deploy.plugins.local_filesystem:enable_plugin"
"s3" = "mkdocs_deploy.plugins.aws_s3:enable_plugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
