[tool.poetry]
name = "mkdocs-deploy"
version = "0.0.0"  # Version set automatically in CI Pipeline.
description = "Mkdocs versioning and deployment tool"
authors = [
    "Philip Couling <couling@gmail.com>",
]
readme = "README.md"
license = "Apache-2.0"
packages = [
    { include = "mkdocs_deploy", from = "source" },
]

[tool.poetry.scripts]
mkdocs-deploy = 'mkdocs_deploy.main:main'

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.4"
click = "^8.0"
boto3 = ">=1.26.45"
toml = ">=0.10.2"
pyyaml = ">=6.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocstrings = "^0.21.2"
mkdocstrings-python = "^0.9.0"
mkdocs-gen-files = "^0.4.0"
mkdocs-material = "^9.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
mypy = "^1.8.0"
moto = {extras = ["s3"], version = "^4.2.13"}
boto3-stubs = {extras = ["s3"], version = "^1.34.21"}

[tool.poetry.plugins."mkdocs.plugins"]
"mkdocs-deploy" = "mkdocs_deploy.mkdocs_plugin:MkdocsDeploy"

[tool.poetry.plugins."mkdocs_deploy.plugins"]
"local" = "mkdocs_deploy.plugins.local_filesystem:enable_plugin"
"s3" = "mkdocs_deploy.plugins.aws_s3:enable_plugin"
"html-redirect" = "mkdocs_deploy.plugins.html_redirect:enable_plugin"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^v?(?P<base>\\d+(\\.\\d+)*)((?P<stage>(a|b|rc|post))(?P<revision>[0-9])+)?"
bump = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.mkdocs-deploy]
built_site = "dist/mkdocs_site"

[tool.pytest.ini_options]
testpaths = [
    "source/tests",
]

[tool.coverage.run]
source = [
    "source/mkdocs_deploy",
]
